解决启动报错问题